--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #eee;
+  background: rgb(173, 172, 172);
   font-family: sans-serif;
 }
 
@@ -7,21 +7,34 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
+
 }
 
 .title {
-  background: #e3f4ff;
+  /* background: #e3f4ff; */
+  background-color: goldenrod;
+  font-size: 22px;
+  padding: 8px;
 }
 
 .content {
-  background: #e3f4ff;
+  background-color: goldenrod;
+   
+
+  padding: 18px;
+  margin-bottom: 8px;
 }
 
 .button-container {
-  background: #e3f4ff;
+  background-color: goldenrod;
+  padding: 18px;
+  text-align: center;
 }
 
 button {
   background: white;
+  display: block;
   border: 1px solid #eee;
+  margin: 0 auto;
 }
